build cloud bsed vector db rag system

--- a/02-LangChain-Basics/2.3-Build-RAG-Skratch/vectorStore-and-RAG.ipynb
+++ b/02-LangChain-Basics/2.3-Build-RAG-Skratch/vectorStore-and-RAG.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "27c2c185",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
     }
    ],
    "source": [
-    "vector_store.add_documents(documents=documents)"
+    "vector_store.add_documents(documents=documents) ## have to pass uuid if not its automatically create one."
    ]
   },
   {
