splite the data chapter wise

--- a/02-LangChain-Basics/Assignment-01-RAG/assignment-02.ipynb
+++ b/02-LangChain-Basics/Assignment-01-RAG/assignment-02.ipynb
@@ -10,36 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "de3b7cda",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.document_loaders import PyPDFLoader\n",
-    "file_path = \"./deepLearning-book/d2l-en.pdf\"\n",
-    "loader = PyPDFLoader(file_path=file_path)"
+    "from langchain_community.document_loaders import PyMuPDFLoader\n",
+    "import os\n",
+    "pdf_dir = \"./deepLearning-book/chapter-3-to-8/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "faf26446",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1151"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "docs = loader.load()\n",
-    "len(docs)"
+    "pdf_files = [os.path.join(pdf_dir, file) for file in os.listdir(pdf_dir) if file.endswith(\".pdf\")]\n"
    ]
   },
   {
@@ -47,60 +35,35 @@
    "execution_count": 8,
    "id": "e1921f0f",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load and combine all chapters\n",
+    "all_documents = []\n",
+    "for pdf_file in pdf_files:\n",
+    "    loader = PyMuPDFLoader(pdf_file)\n",
+    "    docs = loader.load()\n",
+    "    all_documents.extend(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "517584f8",
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "161 Environment and Distribution Shift\n",
-      "parametrized function), it follows that\n",
-      "𝛽𝑖 = 1¹1 ¸exp¹\u0000ℎ¹x𝑖ººº\n",
-      "exp¹\u0000ℎ¹x𝑖ºº¹1 ¸exp¹\u0000ℎ¹x𝑖ººº = exp¹ℎ¹x𝑖ºº. (4.7.7)\n",
-      "As a result, we need to solve two problems: the first, to distinguish between data drawn\n",
-      "frombothdistributions,andthenaweightedempiricalriskminimizationproblemin (4.7.5)\n",
-      "where we weigh terms by𝛽𝑖.\n",
-      "Now we are ready to describe a correction algorithm. Suppose that we have a training set\n",
-      "f¹x1,𝑦1º,..., ¹x𝑛,𝑦𝑛ºgand an unlabeled test setfu1,..., u𝑚g. For covariate shift, we\n",
-      "assume thatx𝑖 for all1 \u0014𝑖 \u0014𝑛are drawn from some source distribution andu𝑖 for all\n",
-      "1 \u0014𝑖 \u0014𝑚 are drawn from the target distribution. Here is a prototypical algorithm for\n",
-      "correcting covariate shift:\n",
-      "1. Createabinary-classificationtrainingset: f¹x1,\u00001º,..., ¹x𝑛,\u00001º,¹u1,1º,..., ¹u𝑚,1ºg.\n",
-      "2. Train a binary classifier using logistic regression to get the functionℎ.\n",
-      "3. Weigh training data using𝛽𝑖 = exp¹ℎ¹x𝑖ººor better𝛽𝑖 = min¹exp¹ℎ¹x𝑖ºº,𝑐ºfor some\n",
-      "constant 𝑐.\n",
-      "4. Use weights𝛽𝑖 for training onf¹x1,𝑦1º,..., ¹x𝑛,𝑦𝑛ºgin (4.7.5).\n",
-      "Note that the above algorithm relies on a crucial assumption. For this scheme to work, we\n",
-      "need that each data example in the target (e.g., test time) distribution had nonzero proba-\n",
-      "bility of occurring at training time. If we find a point where𝑝¹xº> 0 but 𝑞¹xº= 0, then\n",
-      "the corresponding importance weight should be infinity.\n",
-      "Label Shift Correction\n",
-      "Assume that we are dealing with a classification task with𝑘 categories. Using the same\n",
-      "notation inSection 4.7.3, 𝑞and 𝑝are the source distribution (e.g., training time) and target\n",
-      "distribution (e.g., test time), respectively. Assume that the distribution of labels shifts over\n",
-      "time: 𝑞¹𝑦º≠ 𝑝¹𝑦º, but the class-conditional distribution stays the same:𝑞¹x j𝑦º= 𝑝¹x j\n",
-      "𝑦º. If the source distribution 𝑞¹𝑦ºis “wrong”, we can correct for that according to the\n",
-      "following identity in the risk as defined in(4.7.2):\n",
-      "¹ ¹\n",
-      "𝑙¹𝑓¹xº,𝑦º𝑝¹x j𝑦º𝑝¹𝑦º𝑑x𝑑𝑦 =\n",
-      "¹ ¹\n",
-      "𝑙¹𝑓¹xº,𝑦º𝑞¹x j𝑦º𝑞¹𝑦º𝑝¹𝑦º\n",
-      "𝑞¹𝑦º𝑑x𝑑𝑦.\n",
-      "(4.7.8)\n",
-      "Here, our importance weights will correspond to the label likelihood ratios:\n",
-      "𝛽𝑖\n",
-      "def\n",
-      "= 𝑝¹𝑦𝑖º\n",
-      "𝑞¹𝑦𝑖º. (4.7.9)\n",
-      "One nice thing about label shift is that if we have a reasonably good model on the source\n",
-      "distribution, then we can get consistent estimates of these weights without ever having to\n",
-      "deal with the ambient dimension. In deep learning, the inputs tend to be high-dimensional\n",
-      "objects like images, while the labels are often simpler objects like categories.\n",
-      "To estimate the target label distribution, we first take our reasonably good off-the-shelf\n"
-     ]
+     "data": {
+      "text/plain": [
+       "243"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(docs[200].page_content)"
+    "len(all_documents)"
    ]
   },
   {
@@ -113,8 +76,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b2cd7aa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "from langchain_groq import ChatGroq\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b709d4d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ[\"HF_TOKEN\"] = os.getenv(\"HF_TOKEN\")\n",
+    "os.environ[\"GROQ_API_KEY\"] = os.getenv(\"GROQ_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "47f103f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatGroq(model=\"meta-llama/llama-4-scout-17b-16e-instruct\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cd08426",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\IT BD\\anaconda3\\envs\\ailb\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "c:\\Users\\IT BD\\anaconda3\\envs\\ailb\\lib\\site-packages\\huggingface_hub\\file_download.py:143: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\IT BD\\.cache\\huggingface\\hub\\models--sentence-transformers--all-mpnet-base-v2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n",
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "\n",
+    "embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-mpnet-base-v2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "39e30e99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_experimental.text_splitter import SemanticChunker\n",
+    "from langchain_openai.embeddings import OpenAIEmbeddings\n",
+    "\n",
+    "text_splitter = SemanticChunker(\n",
+    "    llm,\n",
+    "    breakpoint_threshold_type=\"percentile\",  # or \"standard_deviation\"\n",
+    "    breakpoint_threshold_amount=92.5,        # slightly more aggressive than 95.0 (default)\n",
+    "    min_chunk_size=200                       # ensures no tiny chunks\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7beb36cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ChatGroq' object has no attribute 'embed_documents'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m chunk_docs \u001b[38;5;241m=\u001b[39m \u001b[43mtext_splitter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit_documents\u001b[49m\u001b[43m(\u001b[49m\u001b[43mall_documents\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mlen\u001b[39m(chunk_docs)\n",
+      "File \u001b[1;32mc:\\Users\\IT BD\\anaconda3\\envs\\ailb\\lib\\site-packages\\langchain_experimental\\text_splitter.py:295\u001b[0m, in \u001b[0;36mSemanticChunker.split_documents\u001b[1;34m(self, documents)\u001b[0m\n\u001b[0;32m    293\u001b[0m     texts\u001b[38;5;241m.\u001b[39mappend(doc\u001b[38;5;241m.\u001b[39mpage_content)\n\u001b[0;32m    294\u001b[0m     metadatas\u001b[38;5;241m.\u001b[39mappend(doc\u001b[38;5;241m.\u001b[39mmetadata)\n\u001b[1;32m--> 295\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreate_documents\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtexts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmetadatas\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmetadatas\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\IT BD\\anaconda3\\envs\\ailb\\lib\\site-packages\\langchain_experimental\\text_splitter.py:280\u001b[0m, in \u001b[0;36mSemanticChunker.create_documents\u001b[1;34m(self, texts, metadatas)\u001b[0m\n\u001b[0;32m    278\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, text \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(texts):\n\u001b[0;32m    279\u001b[0m     start_index \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m--> 280\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m chunk \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit_text\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m    281\u001b[0m         metadata \u001b[38;5;241m=\u001b[39m copy\u001b[38;5;241m.\u001b[39mdeepcopy(_metadatas[i])\n\u001b[0;32m    282\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_add_start_index:\n",
+      "File \u001b[1;32mc:\\Users\\IT BD\\anaconda3\\envs\\ailb\\lib\\site-packages\\langchain_experimental\\text_splitter.py:228\u001b[0m, in \u001b[0;36mSemanticChunker.split_text\u001b[1;34m(self, text)\u001b[0m\n\u001b[0;32m    223\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m    224\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbreakpoint_threshold_type \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgradient\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    225\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(single_sentences_list) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[0;32m    226\u001b[0m ):\n\u001b[0;32m    227\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m single_sentences_list\n\u001b[1;32m--> 228\u001b[0m distances, sentences \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_calculate_sentence_distances\u001b[49m\u001b[43m(\u001b[49m\u001b[43msingle_sentences_list\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    229\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumber_of_chunks \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    230\u001b[0m     breakpoint_distance_threshold \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_threshold_from_clusters(distances)\n",
+      "File \u001b[1;32mc:\\Users\\IT BD\\anaconda3\\envs\\ailb\\lib\\site-packages\\langchain_experimental\\text_splitter.py:203\u001b[0m, in \u001b[0;36mSemanticChunker._calculate_sentence_distances\u001b[1;34m(self, single_sentences_list)\u001b[0m\n\u001b[0;32m    199\u001b[0m _sentences \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m    200\u001b[0m     {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msentence\u001b[39m\u001b[38;5;124m\"\u001b[39m: x, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m: i} \u001b[38;5;28;01mfor\u001b[39;00m i, x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(single_sentences_list)\n\u001b[0;32m    201\u001b[0m ]\n\u001b[0;32m    202\u001b[0m sentences \u001b[38;5;241m=\u001b[39m combine_sentences(_sentences, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuffer_size)\n\u001b[1;32m--> 203\u001b[0m embeddings \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43membeddings\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43membed_documents\u001b[49m(\n\u001b[0;32m    204\u001b[0m     [x[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcombined_sentence\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m sentences]\n\u001b[0;32m    205\u001b[0m )\n\u001b[0;32m    206\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, sentence \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(sentences):\n\u001b[0;32m    207\u001b[0m     sentence[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcombined_sentence_embedding\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m embeddings[i]\n",
+      "File \u001b[1;32mc:\\Users\\IT BD\\anaconda3\\envs\\ailb\\lib\\site-packages\\pydantic\\main.py:991\u001b[0m, in \u001b[0;36mBaseModel.__getattr__\u001b[1;34m(self, item)\u001b[0m\n\u001b[0;32m    988\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__getattribute__\u001b[39m(item)  \u001b[38;5;66;03m# Raises AttributeError if appropriate\u001b[39;00m\n\u001b[0;32m    989\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    990\u001b[0m     \u001b[38;5;66;03m# this is the current error\u001b[39;00m\n\u001b[1;32m--> 991\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[38;5;124m object has no attribute \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mitem\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'ChatGroq' object has no attribute 'embed_documents'"
+     ]
+    }
+   ],
+   "source": [
+    "chunk_docs = text_splitter.split_documents(all_documents)\n",
+    "len(chunk_docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74a93515",
    "metadata": {},
    "outputs": [],
    "source": []
