try different approch

--- a/02-LangChain-Basics/Assignment-01-RAG/assignment-02.ipynb
+++ b/02-LangChain-Basics/Assignment-01-RAG/assignment-02.ipynb
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "id": "fb8fcd27",
    "metadata": {},
    "outputs": [],
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "55b9fe0b",
    "metadata": {},
    "outputs": [],
@@ -1356,13 +1356,13 @@
     "\n",
     "def format_docs(retriever_docs):\n",
     "    context_text = \"\\n\\n\".join(doc.page_content for doc in retriever_docs)\n",
-    "    print(context_text)\n",
+    "    print()\n",
     "    return context_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "554f4d46",
    "metadata": {},
    "outputs": [
