prepare rag and download attentation all you need as the documents

--- a/03-LangGraph-Introduction/Assignments/assignment-04-Simple-Workstator/experiment-notebook.ipynb
+++ b/03-LangGraph-Introduction/Assignments/assignment-04-Simple-Workstator/experiment-notebook.ipynb
@@ -5,23 +5,83 @@
    "execution_count": 1,
    "id": "68886b9a",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_groq import ChatGroq\n",
+    "from langchain_tavily import TavilySearch\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from pydantic import BaseModel, Field\n",
+    "from typing import TypedDict, Annotated\n",
+    "import faiss\n",
+    "from langchain_community.vectorstores import FAISS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a83b502d",
+   "metadata": {},
+   "source": [
+    "## **Prepare Vector Store**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "59a3bb46",
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test line\n"
-     ]
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Test line\")"
+    "from langchain_community.document_loaders import PyPDFLoader\n",
+    "\n",
+    "loader = PyPDFLoader(\"data/attentation-all-you-need.pdf\")\n",
+    "docs = loader.load()\n",
+    "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "21c36b04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "96"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "\n",
+    "splitter = RecursiveCharacterTextSplitter(\n",
+    "    chunk_size = 500,\n",
+    "    chunk_overlap = 80\n",
+    ")\n",
+    "\n",
+    "documents = splitter.split_documents(documents=docs)\n",
+    "len(documents)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59a3bb46",
+   "id": "d88768c6",
    "metadata": {},
    "outputs": [],
    "source": []
