--- a/03-LangGraph-Introduction/Assignments/assignment-04-Simple-Workstator/experiment-notebook.ipynb
+++ b/03-LangGraph-Introduction/Assignments/assignment-04-Simple-Workstator/experiment-notebook.ipynb
@@ -452,8 +452,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "id": "e8deb913",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Literal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "7932ab06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SelectPath(BaseModel):\n",
+    "    path: Annotated[Literal[\"LLM_CALL\", \"RAG_CALL\", \"INTERNET_SEARCH\"], Field(description=\"Based on the user query select one path only. if user want to know about the Attention all you need paper or any query related to the Transformer then select the Rag call. if user want to know basics question the select llm call and finally user want to know about recent info then select the internet search.\")]\n",
+    "    reason: Annotated[str, Field(description=\"Why you select a specific path give reason in one sentence.\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "1d343695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.output_parsers import PydanticOutputParser\n",
+    "\n",
+    "parser = PydanticOutputParser(pydantic_object=SelectPath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "be7bc521",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_prompt = PromptTemplate(\n",
+    "    template=\"\"\"\n",
+    "    Think step by step on user query. The user query: {question}\\n\\n My vector store is related of Transformer paper as the paper name is *attention all you need* so if you think like user query is related to this paper then select the 'RAG_CALL'. Or user want to know about the latest news or any info the you select the 'INTERNET_SEARCH'. Finally if user want to know basics question such as wants know ML, DL, NLP, or any basics question if you think llm model can capable to give sold and correct answer then select the 'LLM_CALL'. you have to follow this format instruction.\\n\\n{format_instruction}.\n",
+    "    \"\"\",\n",
+    "    input_variables=[\"question\"],\n",
+    "    partial_variables={\n",
+    "        \"format_instruction\": parser.get_format_instructions()\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "07233fbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PromptTemplate(input_variables=['question'], input_types={}, partial_variables={'format_instruction': 'The output should be formatted as a JSON instance that conforms to the JSON schema below.\\n\\nAs an example, for the schema {\"properties\": {\"foo\": {\"title\": \"Foo\", \"description\": \"a list of strings\", \"type\": \"array\", \"items\": {\"type\": \"string\"}}}, \"required\": [\"foo\"]}\\nthe object {\"foo\": [\"bar\", \"baz\"]} is a well-formatted instance of the schema. The object {\"properties\": {\"foo\": [\"bar\", \"baz\"]}} is not well-formatted.\\n\\nHere is the output schema:\\n```\\n{\"properties\": {\"path\": {\"description\": \"Based on the user query select one path only. if user want to know about the Attention all you need paper or any query related to the Transformer then select the Rag call. if user want to know basics question the select llm call and finally user want to know about recent info then select the internet search.\", \"enum\": [\"LLM_CALL\", \"RAG_CALL\", \"INTERNET_SEARCH\"], \"title\": \"Path\", \"type\": \"string\"}, \"reason\": {\"description\": \"Why you select a specific path give reason in one sentence.\", \"title\": \"Reason\", \"type\": \"string\"}}, \"required\": [\"path\", \"reason\"]}\\n```'}, template=\"\\n    Think step by step on user query. The user query: {question}\\n\\n My vector store is related of Transformer paper as the paper name is *attention all you need* so if you think like user query is related to this paper then select the 'RAG_CALL'. Or user want to know about the latest news or any info the you select the 'INTERNET_SEARCH'. Finally if user want to know basics question such as wants know ML, DL, NLP, or any basics question if you think llm model can capable to give sold and correct answer then select the 'LLM_CALL'. you have to follow this format instruction.\\n\\n{format_instruction}.\\n    \")"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path_prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3a1ccafb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_chain = path_prompt | llm | parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "476141ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SelectPath(path='RAG_CALL', reason=\"The user query is directly related to the Transformer paper, 'Attention Is All You Need', specifically asking about positional embeddings.\")"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_chain.invoke(\"What is positional embeddings?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0439728f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SelectPath(path='INTERNET_SEARCH', reason='The user query is seeking current and specific information about the weather in Dhaka, which requires an internet search for the most accurate and up-to-date information.')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_chain.invoke(\"What is the weather today in Dhaka?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e0576b4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SelectPath(path='LLM_CALL', reason='The user is asking a conceptual question about the necessity of learning Agentic AI, which an LLM can potentially answer by providing information on its significance.')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_chain.invoke(\"Why i need to learn Agentic AI?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c0b6c17",
    "metadata": {},
    "outputs": [],
    "source": []
